Added the method ObterUmaPreposição using promises

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
 <body>
 
 <h2>Ações<h2>
-    <button><a href="/obterDeputados">Carregar Deputados da Legislatura atual</a></button>
+    <button><a href="/getMotionRollCallsInYear/2015">Carregar projetos do ano 2015</a></button>
     <br>
     <button><a href="/listarTodasProposicoesVotadasEmPlenario">Carregar todas Proposições Votadas</a></button>
     <br>
