Load and save motion and roll calls

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,12 +8,12 @@
 <body>
 
 <h2>Ações<h2>
-    <button><a href="/getMotionRollCallsInYear/2015">Carregar projetos do ano 2015</a></button>
+    <button><a href="/obterTodasProposicoes">Obter todas proposicoes</a></button>
+    <br>
+    <button><a href="/obterTodasVotacoesProposicoes">Obter todas votacoes proposicoes</a></button>
     <br>
     <button><a href="/listarTodasProposicoesVotadasEmPlenario">Carregar todas Proposições Votadas</a></button>
     <br>
-    <button><a href="/obterProposicao/PL/3962/2008">Obter PL3962-2008</a></button>
-    <br>
-    <button><a href="/obterVotacaoProposicao/PL/1992/2007">Obter votos da PL1992-2007</a></button>
+    <button><a href="/obterProposicao">Obter proposicao</a></button>
 </body>
 </html>
