Generate the json for CivisAnalysis

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,5 +15,7 @@
     <button><a href="/listarTodasProposicoesVotadasEmPlenario">Carregar todas Proposições Votadas</a></button>
     <br>
     <button><a href="/obterProposicao">Obter proposicao</a></button>
+    <br>
+    <button><a href="/generateJsonFiles">Obter os arquivos json</a></button>
 </body>
 </html>
