--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,8 @@
     <br>
     <button><a href="/obterProposicao">Obter proposicao</a></button>
     <br>
+    <button><a href="/adicionarTemasParaProposicoes">Adicionar Temas para Proposições</a></button>
+    <br>
     <button><a href="/generateJsonFiles">Obter os arquivos json</a></button>
 </body>
 </html>
